--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
-@@ .. @@
- {
-   "name": "ciel",
--  "private": true,
-   "version": "0.0.0",
-+  "description": "Portfolio Risk Management Application",
-+  "author": "Your Name",
-+  "private": true,
-   "type": "module",
-   "scripts": {
-     "dev": "vite",
-     "build": "tsc && vite build",
--    "preview": "vite preview"
-+    "preview": "vite preview",
-+    "tauri": "tauri",
-+    "tauri:dev": "tauri dev",
-+    "tauri:build": "tauri build"
-   },
-   "dependencies": {
-     "@radix-ui/react-dropdown-menu": "^2.1.2",
-@@ .. @@
-     "react": "^18.3.1",
-     "react-dom": "^18.3.1",
--    "tailwindcss-animate": "^1.0.7"
-+    "tailwindcss-animate": "^1.0.7",
-+    "@tauri-apps/api": "^1.5.1",
-+    "@tauri-apps/plugin-fs": "^1.0.0",
-+    "recharts": "^2.8.0",
-+    "axios": "^1.6.2",
-+    "zustand": "^4.4.7",
-+    "papaparse": "^5.4.1",
-+    "date-fns": "^2.30.0",
-+    "clsx": "^2.0.0",
-+    "tailwind-merge": "^2.2.0"
-   },
-   "devDependencies": {
-     "@types/node": "^22.8.4",
-+    "@types/papaparse": "^5.3.14",
-     "@types/react": "^18.3.12",
-@@ .. @@
-     "vite": "^5.4.10"
-   }
- }
+{
+  "name": "ciel",
+  "version": "0.0.0",
+  "description": "Portfolio Risk Management Application",
+  "author": "Your Name",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
+  },
+  "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.454.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "@tauri-apps/api": "^1.5.1",
+    "@tauri-apps/plugin-fs": "^1.0.0",
+    "recharts": "^2.8.0",
+    "axios": "^1.6.2",
+    "zustand": "^4.4.7",
+    "papaparse": "^5.4.1",
+    "date-fns": "^2.30.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.4",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "~5.6.2",
+    "vite": "^5.4.10"
+  }
+}
