--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "@tauri-apps/api": "^1.5.1",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-fs": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0",
+    "@tauri-apps/plugin-shell": "^2.0.0",
     "recharts": "^2.8.0",
     "axios": "^1.6.2",
     "zustand": "^4.4.7",
@@ -32,6 +35,7 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.0.0",
     "@types/node": "^22.8.4",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.12",
